--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,54 +32,53 @@
                 android:layout_height="70dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="16dp"
-                android:background="@drawable/button_selector"
+                android:background="@color/colorPrimaryDark"
                 android:text="@string/cargar_reparto"
                 android:textAllCaps="false"
-                android:textColor="#FFFFFF"
+                android:textColor="@color/cardview_dark_background"
                 android:textSize="18sp" />
 
             <Button
                 android:id="@+id/button_resumen_reparto"
+                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="16dp"
-                android:background="@drawable/button_selector"
+                android:background="@color/colorPrimaryDark"
                 android:text="@string/resumen_reparto"
                 android:textAllCaps="false"
-                android:textColor="#FFFFFF"
+                android:textColor="@color/cardview_dark_background"
                 android:textSize="18sp" />
 
             <Button
                 android:id="@+id/button_nueva_notificacion"
+                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="16dp"
-                android:background="@drawable/button_selector"
+                android:background="@color/colorPrimaryDark"
                 android:text="@string/nueva_notificacion"
                 android:textAllCaps="false"
-                android:textColor="#FFFFFF"
+                android:textColor="@color/cardview_dark_background"
                 android:textSize="18sp" />
-
-            <android.support.v4.widget.Space
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1" />
 
             <Button
                 android:id="@+id/button_cerrar_sesion"
-                android:layout_width="345dp"
-                android:layout_height="82dp"
+                style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="20dp"
-                android:background="@color/colorBackgroundEntregado"
+                android:background="@color/colorBackgroundAusente"
+                android:elevation="0dp"
                 android:padding="10dp"
                 android:text="@string/titulo_logout"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="@color/common_google_signin_btn_text_dark_focused"
-                android:textSize="14sp" />
+                android:textSize="18sp" />
 
         </LinearLayout>
     </ScrollView>
