--- a/app/src/main/res/layout/activity_resumen_reparto.xml
+++ b/app/src/main/res/layout/activity_resumen_reparto.xml
@@ -130,6 +130,28 @@
                     android:textStyle="bold" />
 
             </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/textView_resumen_total_lista_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/total_lista"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/textView_resumen_total_notif_lista_value"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginStart="20dp"
+                    android:textSize="10sp"
+                    android:textStyle="bold" />
+
+            </TableRow>
         </TableLayout>
     </LinearLayout>
 
@@ -346,6 +368,7 @@
                     android:layout_height="match_parent">
 
                     <TextView
+                        android:id="@+id/textView_resumen_entregado_en_oficina_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/entregado_en_oficina_08"
@@ -367,6 +390,7 @@
                     android:layout_height="match_parent">
 
                     <TextView
+                        android:id="@+id/textView_resumen_no_entregado_en_oficina_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/no_entregado_en_oficina_09"
@@ -392,7 +416,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/total_resultados"
-                        android:textSize="15sp"
+                        android:textSize="14sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -416,7 +440,7 @@
                         android:text="@string/total_notificaciones_acabadas"
                         android:textAllCaps="false"
                         android:textColor="@color/colorBackgroundNoEntregado"
-                        android:textSize="15sp"
+                        android:textSize="14sp"
                         android:textStyle="bold|italic" />
 
                     <TextView
@@ -440,7 +464,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/total_fotos"
                         android:textColor="@color/colorBackgroundNoEntregado"
-                        android:textSize="15sp"
+                        android:textSize="14sp"
                         android:textStyle="bold|italic" />
 
                     <TextView
@@ -459,8 +483,8 @@
             <Button
                 android:id="@+id/button_resumen_cerrar_reparto"
                 style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:background="@drawable/background_gradient"
                 android:padding="10dp"
