--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
                 android:layout_height="70dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="16dp"
-                android:background="@color/colorPrimaryDark"
+                android:background="@color/colorPrimary"
                 android:text="@string/cargar_reparto"
                 android:textAllCaps="false"
                 android:textColor="@color/cardview_dark_background"
@@ -45,7 +45,7 @@
                 android:layout_height="70dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="16dp"
-                android:background="@color/colorPrimaryDark"
+                android:background="@color/colorPrimary"
                 android:text="@string/resumen_reparto"
                 android:textAllCaps="false"
                 android:textColor="@color/cardview_dark_background"
@@ -58,7 +58,7 @@
                 android:layout_height="70dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="16dp"
-                android:background="@color/colorPrimaryDark"
+                android:background="@color/colorPrimary"
                 android:text="@string/nueva_notificacion"
                 android:textAllCaps="false"
                 android:textColor="@color/cardview_dark_background"
@@ -78,7 +78,7 @@
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="@color/common_google_signin_btn_text_dark_focused"
-                android:textSize="18sp"
+                android:textSize="14sp"
                 android:textStyle="bold"
                 tools:text="@string/titulo_logout" />
 
