--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#c1c9f5</color>
-    <color name="colorPrimaryDark">#8394f2</color>
-    <color name="colorAccent">#ff4081</color>
+    <color name="colorPrimaryDark">#f7b8d6</color>
+    <color name="colorAccent">#fc86ae</color>
     <color name="colorBoton">#80adef</color>
     <color name="colorGrisSuave">#E6E6E6</color>
     <color name="colorBotonEntregado">#88b0de</color>
