Nuevas fucnionalidades PEE no mostrar nada si el resultado no es coherente

--- a/app/src/main/res/menu/menu_borrar_notificacion.xml
+++ b/app/src/main/res/menu/menu_borrar_notificacion.xml
@@ -15,7 +15,13 @@
         android:id="@+id/menu_borrar_notificaciones"
         android:icon="@android:drawable/ic_menu_delete"
         android:title="@string/filtro"
-        app:showAsAction="always"/>
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/menu_sello_tiempo"
+        android:icon="@drawable/ic_sync_black_24dp"
+        android:title="@string/generado_sello_de_tiempo"
+        android:visible="false"
+        app:showAsAction="always" />
 
 
 </menu>
