--- a/app/src/main/res/layout/activity_resumen_reparto.xml
+++ b/app/src/main/res/layout/activity_resumen_reparto.xml
@@ -150,7 +150,26 @@
                     android:layout_marginStart="20dp"
                     android:textSize="10sp"
                     android:textStyle="bold" />
+            </TableRow>
 
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <TextView
+                    android:id="@+id/textView_resumen_total_lista_cert_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/total_lista_cert"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/textView_resumen_total_cert_lista_value"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginStart="20dp"
+                    android:textSize="10sp"
+                    android:textStyle="bold" />
             </TableRow>
         </TableLayout>
     </LinearLayout>
